# docker-detector

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
docker_detector/: __init__.py  core.py
is_docker/: __init__.py  core.py
tests/: test_docker_detector.py  test_is_docker.py
