[project]
name = "docker-detector"
version = "1.0.0"
description = "Detect if your Python process is running inside a Docker container — inspired by the popular is-docker npm package. Works on Linux, with optional cache refresh for repeated checks."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Y. Siva Sai Krishna", email = "sivasaikrishnassk@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
  "Typing :: Typed"
]
keywords = [
    "docker",
    "container",
    "detect",
    "detection",
    "dockerized",
    "inside",
    "environment",
    "process",
    "is-docker",
    "container-detection",
    "docker-detection",
    "utilities",
    "utils",
    "mit license",
    "ysskrishna"
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.urls]
Homepage = "https://github.com/ysskrishna/docker-detector"
Repository = "https://github.com/ysskrishna/docker-detector.git"
Issues = "https://github.com/ysskrishna/docker-detector/issues"
Changelog = "https://github.com/ysskrishna/docker-detector/blob/main/CHANGELOG.md"
Discussions = "https://github.com/ysskrishna/docker-detector/discussions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docker_detector"]
